--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -60,3 +61,9 @@
     "not ie <= 8"
   ]
 }
+		"scripts": {
+	  "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+	  "start": "npm run dev",
+	  "build": "node build/build.js",
+	  "deploy": "gh-pages -d dist" ## 添加部署选项
+	}
